Revert "Refactored Listener according to new grammar"
This reverts commit 20aba796c536b7319d9229e710cbbf8919bad2a4.